Se corrige un error en el método GPROUtils.getMoneyAsInt para que tenga en cuenta correctamente el locale a la hora de hacer el parseo de las cantidades monetarias. También se eliminan algunas anotaciones sobre calidad de código